--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular2-jwt": "^0.2.3",
     "angular4-files-upload": "^1.0.2",
     "chart.js": "^2.7.2",
+    "chartist": "^0.11.0",
     "core-js": "^2.4.1",
     "install": "^0.10.4",
     "jwt-decode": "^2.2.0",
